src/objects/Adjustment__x.object
<CustomObject>
    <description>Invoice and Invoice Item Adjustments from Kenan FX</description>
    <externalDataSource>Kenan_FX_Connection</externalDataSource>
    <externalName>Adjustment</externalName>
    <fields>
        <fullName>Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>Invoice</externalDeveloperName>
        <label>Invoice</label>
        <referenceTo>UM_InvoiceHeader__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Item__c</fullName>
        <externalDeveloperName>InvoiceItem</externalDeveloperName>
        <label>Invoice Item</label>
        <length>255</length>
        <referenceTo>InvoiceItem__x</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>accountExternalIdType__c</fullName>
        <description>accountExternalIdType</description>
        <externalDeveloperName>accountExternalIdType</externalDeveloperName>
        <label>accountExternalIdType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountExternalId__c</fullName>
        <description>accountExternalId</description>
        <externalDeveloperName>accountExternalId</externalDeveloperName>
        <label>accountExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountInternalId__c</fullName>
        <description>accountInternalId</description>
        <externalDeveloperName>accountInternalId</externalDeveloperName>
        <label>accountInternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adjReasonCode__c</fullName>
        <description>adjReasonCode</description>
        <externalDeveloperName>adjReasonCode</externalDeveloperName>
        <label>adjReasonCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billRefNo__c</fullName>
        <description>billRefNo</description>
        <externalDeveloperName>billRefNo</externalDeveloperName>
        <label>billRefNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>billRefResets__c</fullName>
        <description>billRefResets</description>
        <externalDeveloperName>billRefResets</externalDeveloperName>
        <label>billRefResets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currencyCode__c</fullName>
        <description>currencyCode</description>
        <externalDeveloperName>currencyCode</externalDeveloperName>
        <label>currencyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectiveDate__c</fullName>
        <externalDeveloperName>effectiveDate</externalDeveloperName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fraudIndicator__c</fullName>
        <externalDeveloperName>fraudIndicator</externalDeveloperName>
        <label>fraudIndicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>origType__c</fullName>
        <description>(R: 0, 2, 3, 4, 5, 7) When adjusting an InvoiceDetail or usage detail record, the value of the InvoiceDetail.TypeCode: 0 = miscellaneous adjustment 2 = adjustment against recurring charge 3 = adjustment against non-recurring charge	4 = adjustment against an adjustment 5 = adjustment against nondistributed taxes 7 = adjustment against usage charge</description>
        <externalDeveloperName>origType</externalDeveloperName>
        <label>origType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primaryUnitsType__c</fullName>
        <description>Required on Create. (R: 403) Unit type for Primary Units: 140 = Days 401 = Percent 402 = Date range 403 = Explicit amount 404 = Units</description>
        <externalDeveloperName>primaryUnitsType</externalDeveloperName>
        <label>primaryUnitsType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primaryUnits__c</fullName>
        <externalDeveloperName>primaryUnits</externalDeveloperName>
        <label>primaryUnits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requestStatus__c</fullName>
        <externalDeveloperName>requestStatus</externalDeveloperName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalAmt__c</fullName>
        <description>totalAmt</description>
        <externalDeveloperName>totalAmt</externalDeveloperName>
        <label>Total Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trackingIdServ__c</fullName>
        <description>trackingIdServ</description>
        <externalDeveloperName>trackingIdServ</externalDeveloperName>
        <label>trackingIdServ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trackingId__c</fullName>
        <description>trackingId</description>
        <externalDeveloperName>trackingId</externalDeveloperName>
        <label>trackingId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Adjustment</label>
    <pluralLabel>Adjustments</pluralLabel>
</CustomObject>